運動記録取得処理実装
