# backend/golang/src/internal/entity/exercise.go
@@ -3,12 +3,12 @@ package entity
 import "time"
 
 type ExerciseRecordType struct {
-	Id             int64     `db:"id"`
-	UserId         int64     `db:"user_id"`
-	UserName       string    `db:"user_name"`
-	Exercise_image string    `db:"exercise_image"`
-	ExerciseTime   int64     `db:"exercise_time"`
-	ExerciseDate   time.Time `db:"exercise_date"`
-	Comment        string    `db:"comment"`
-	LikesCount     int64     `db:"likes_count"`
+	Id             int64     `json:"id" db:"id"`
+	UserId         int64     `json:"user_id" db:"user_id"`
+	UserName       string    `json:"user_name" db:"user_name"`
+	Exercise_image string    `json:"exercise_image" db:"exercise_image"`
+	ExerciseTime   int64     `json:"exercise_time" db:"exercise_time"`
+	ExerciseDate   time.Time `json:"exercise_date" db:"exercise_date"`
+	Comment        string    `json:"comment" db:"comment"`
+	LikesCount     int64     `json:"likes_count" db:"likes_count"`
 }
