# backend/golang/src/internal/handler/exercises.go
@@ -6,9 +6,17 @@ import (
 	"net/http"
 	"strconv"
 	"strings"
+	"time"
 
 	"github.com/gin-gonic/gin"
 )
+
+type exerciseCreateTypeDTO struct {
+	Image        string    `json:"exercise_image" db:"exercise_image"`
+	ExerciseTime int64     `json:"exercise_time" db:"exercise_time"`
+	Date         time.Time `json:"exercise_date" db:"exercise_date"`
+	Comment      string    `json:"comment" db:"comment"`
+}
 
 type ExerciseHandler struct {
 	svc service.ExerciseService
@@ -36,6 +44,7 @@ func (h *ExerciseHandler) GetExercisesById(ctx *gin.Context) {
 		ctx.AbortWithStatusJSON(http.StatusBadRequest, gin.H{"error": "server internal error"})
 		return
 	}
+
 	log.Println("Get Exercise User ", id, " exercises: ", exercises)
 	ctx.JSON(http.StatusOK, exercises)
 }
@@ -52,4 +61,29 @@ func (h *ExerciseHandler) GetExercises(ctx *gin.Context) {
 		return
 	}
 	ctx.JSON(http.StatusOK, exercises)
+}
+
+func (h *ExerciseHandler) CreateExercise(ctx *gin.Context) {
+	// ヘッダー取り出し
+	authz := ctx.GetHeader("Authorization")
+	if !strings.HasPrefix(authz, "Bearer ") {
+		ctx.JSON(http.StatusUnauthorized, gin.H{"error": "missing bearer token"})
+		return
+	}
+	token := strings.TrimPrefix(authz, "Bearer ")
+
+	var exerciseCreate exerciseCreateTypeDTO
+	if err := ctx.ShouldBindJSON(&exerciseCreate); err != nil {
+		log.Println("error: exercise read body ", err)
+		ctx.AbortWithStatusJSON(http.StatusBadRequest, gin.H{"error": "server internal error"})
+		return
+	}
+
+	err := h.svc.CreateExercise(ctx.Request.Context(), exerciseCreate.Image, exerciseCreate.ExerciseTime, exerciseCreate.Date, exerciseCreate.Comment, token)
+	if err != nil {
+		log.Println("error: exercise create ", err)
+		ctx.AbortWithStatusJSON(http.StatusBadRequest, gin.H{"error": "server internal error"})
+		return
+	}
+	ctx.JSON(http.StatusOK, gin.H{"message": "exercise record created successfully"})
 }
